feat: add footer adaptive 320

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -318,6 +318,7 @@
         <section class="container in-addition-container" id="contacts">
             <div class="in-addition-block">
                 <img src="../../assets/images/donation-dog.png" class="in-addition-image" alt="">
+                <img src="../../assets/images/donation-dog-320.png" class="in-addition-image3" alt="">
                 <div class="in-addition-content">
                     <h2 class="in-addition-title">You can also<br>make a donation</h2>
                     <p class="in-addition-text">Name of the bank / Type of bank account</p>
@@ -336,18 +337,18 @@
     <footer class="container footer-container">
         <div class="footer-block">
             <div class="contacts">
-                <h2 class="footer-title">For questions<br>and suggestions</h2>
+                <h2 class="footer-title">For questions and suggestions</h2>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts" alt="">
+                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="">
                     <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                 </div>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts" alt="">
+                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="">
                     <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
                 </div>
             </div>
             <div class="locations">
-                <h2 class="footer-title">We are waiting<br>for your visit</h2>
+                <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
                     <a target="_blank"
@@ -364,7 +365,8 @@
                 </div>
             </div>
             <div class="footer-image">
-                <img src="../../assets/images/footer-puppy.png" alt="">
+                <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="">
+                <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="">
             </div>
         </div>
     </footer>
