feat: add modal adaptive

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -29,9 +29,9 @@
             </ul>
         </nav>
         <div class="hamburger" id="hamburger">
-            <span class="line line-1"></span>
-            <span class="line line-2"></span>
-            <span class="line line-3"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
                             friend</a></button>
                 </div>
                 <div>
-                    <img src="../../assets/images/puppy-1280.png" class="not-only-image" alt="">
+                    <img src="../../assets/images/puppy-1280.png" class="not-only-image1" alt="">
                     <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="">
                     <img src="../../assets/images/puppy-320..png" class="not-only-image3" alt="">
                 </div>
@@ -57,7 +57,7 @@
         <section class="container about-container" id="about">
             <div class="about-block">
                 <div>
-                    <img src="../../assets/images/about-pets.jpg" class="about-image" alt="">
+                    <img src="../../assets/images/about-pets.jpg" class="about-image1" alt="">
                     <img src="../../assets/images/about-pets-768.jpg" class="about-image2" alt="">
                     <img src="../../assets/images/about-pets-350.jpg" class="about-image3" alt="">
                 </div>
@@ -110,7 +110,7 @@
                                             velvet with a thick lush fur. Will love you until the last breath she takes
                                             as long as you are the one. She is picky about her affection. She loves
                                             cuddles and to stretch into your hands for a deeper relaxations.</p>
-                                        <ul>
+                                        <ul class="modal-ul">
                                             <li><span class="modal-span1">Age:</span>
                                                 <span class="modal-span2"> 2 months</span>
                                             </li>
@@ -155,7 +155,7 @@
                                             play,
                                             but won't hesitate to play up a storm in the house if she has all of her
                                             favorite toys.</p>
-                                        <ul>
+                                        <ul class="modal-ul">
                                             <li><span class="modal-span1">Age:</span>
                                                 <span class="modal-span2"> 2 months</span>
                                             </li>
@@ -195,7 +195,7 @@
                                             basic commands and is a smart pup. Since he is on the stronger side, he will
                                             learn a lot from your training. Woody will be happier when he finds a new
                                             family that can spend a lot of time with him.</p>
-                                        <ul>
+                                        <ul class="modal-ul">
                                             <li><span class="modal-span1">Age:</span>
                                                 <span class="modal-span2"> 2 months</span>
                                             </li>
@@ -317,7 +317,7 @@
 
         <section class="container in-addition-container" id="contacts">
             <div class="in-addition-block">
-                <img src="../../assets/images/donation-dog.png" class="in-addition-image" alt="">
+                <img src="../../assets/images/donation-dog.png" class="in-addition-image1" alt="">
                 <img src="../../assets/images/donation-dog-320.png" class="in-addition-image3" alt="">
                 <div class="in-addition-content">
                     <h2 class="in-addition-title">You can also<br>make a donation</h2>
