--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style2.css">
+    <link rel="stylesheet" href="./style-adaptive2.css">
     <!-- <link rel="icon" href="./assets/favicon.ico"> -->
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
 </head>
@@ -30,8 +31,12 @@
                         class="header-link">Contacts</a></li>
             </ul>
         </nav>
+        <div class="hamburger" id="hamburger">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </div>
     </header>
-
 
 
     <main>
@@ -42,7 +47,7 @@
                 <div class="our-friends-catalog">
                     <div class="card-box">
                         <!-- ------1----- -->
-                        <div class="card">
+                        <div class="card card1">
                             <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
                             <h4 class="card-name">Katrine</h4>
                             <button class="card-button"><a href="#openModal1" class="card-link">Learn more</a></button>
@@ -82,7 +87,7 @@
                             </div>
                         </div>
                         <!-- ------2----- -->
-                        <div class="card">
+                        <div class="card card2">
                             <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
                             <h4 class="card-name">Jennifer</h4>
                             <button class="card-button"><a href="#openModal2" class="card-link">Learn more</a></button>
@@ -127,7 +132,7 @@
                             </div>
                         </div>
                         <!-- ------3----- -->
-                        <div class="card">
+                        <div class="card card3">
                             <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
                             <h4 class="card-name">Woody</h4>
                             <button class="card-button"><a href="#openModal3" class="card-link">Learn more</a></button>
@@ -167,7 +172,7 @@
                             </div>
                         </div>
                         <!-- ------4----- -->
-                        <div class="card">
+                        <div class="card card4">
                             <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="">
                             <h4 class="card-name">Sophia</h4>
                             <button class="card-button"><a href="#openModal4" class="card-link">Learn more</a></button>
@@ -212,8 +217,8 @@
                 <div class="our-friends-catalog">
                     <div class="card-box">
                         <!-- ------5----- -->
-                        <div class="card">
-                            <img src="../../assets/images/pets-timmy.svg" class="card-image" alt="">
+                        <div class="card card5">
+                            <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="">
                             <h4 class="card-name">Timmy</h4>
                             <button class="card-button"><a href="#openModal5" class="card-link">Learn more</a></button>
 
@@ -225,7 +230,7 @@
                                                 alt="">
                                         </a>
                                     </button>
-                                    <img src="../../assets/images/pets-timmy.svg" class="modal-image" alt="">
+                                    <img src="../../assets/images/pets-timmy.jpg" class="modal-image" alt="">
                                     <div class="modal-box">
                                         <h2 class="modal-title">Timmy</h2>
                                         <p class="modal-subtitle">Cat - British Shorthair</p>
@@ -252,7 +257,7 @@
                             </div>
                         </div>
                         <!-- ------6----- -->
-                        <div class="card">
+                        <div class="card card6">
                             <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="">
                             <h4 class="card-name">Charly</h4>
                             <button class="card-button"><a href="#openModal6" class="card-link">Learn more</a></button>
@@ -292,7 +297,7 @@
                             </div>
                         </div>
                         <!-- ------7----- -->
-                        <div class="card">
+                        <div class="card card7">
                             <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="">
                             <h4 class="card-name">Scarlett</h4>
                             <button class="card-button"><a href="#openModal7" class="card-link">Learn more</a></button>
@@ -332,7 +337,7 @@
                             </div>
                         </div>
                         <!-- ------8----- -->
-                        <div class="card">
+                        <div class="card card8">
                             <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
                             <h4 class="card-name">Freddie</h4>
                             <button class="card-button"><a href="#openModal8" class="card-link">Learn more</a></button>
@@ -400,11 +405,11 @@
             <div class="contacts">
                 <h2 class="footer-title">For questions<br>and suggestions</h2>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts" alt="">
+                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="">
                     <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                 </div>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts" alt="">
+                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="">
                     <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
                 </div>
             </div>
@@ -427,6 +432,7 @@
             </div>
             <div class="footer-image">
                 <img src="../../assets/images/footer-puppy.png" alt="">
+                <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="">
             </div>
         </div>
     </footer>
