feat: add page pets adaptive 320

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -226,7 +226,7 @@
                         <img src="../../assets/icons/arrow2.svg" alt="">
                     </button>
                 </div>
-                <button class="our-friends-button"><a href="../pets/index2.html" target="blank"
+                <button class="our-friends-button"><a href="../pets/index2.html#pets" target="blank"
                         class="our-friends-button-link">Get
                         to
                         know the
