--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -403,7 +403,7 @@
     <footer class="container footer-container">
         <div class="footer-block">
             <div class="contacts">
-                <h2 class="footer-title">For questions<br>and suggestions</h2>
+                <h2 class="footer-title">For questions and suggestions</h2>
                 <div class="link-box-contacts">
                     <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="">
                     <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
@@ -414,7 +414,7 @@
                 </div>
             </div>
             <div class="locations">
-                <h2 class="footer-title">We are waiting<br>for your visit</h2>
+                <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
                     <a target="_blank"
@@ -431,7 +431,7 @@
                 </div>
             </div>
             <div class="footer-image">
-                <img src="../../assets/images/footer-puppy.png" alt="">
+                <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="">
                 <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="">
             </div>
         </div>
