--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -51,11 +51,11 @@
                     <div class="our-friends-catalog">
                         <div class="card-box">
                             <!-- ------1----- -->
-                            <div class="card card1"><a href="#openModal1" class="card-link">
-                                    <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Katrine</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card1">
+                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Katrine</h4>
+                                <button class="card-button"><a href="#openModal1" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -71,11 +71,9 @@
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
                                             <p class="modal-text">Katrine is a beautiful girl. She is as soft as the
                                                 finest
-                                                velvet with a thick lush fur. Will love you until the last breath
-                                                she
+                                                velvet with a thick lush fur. Will love you until the last breath she
                                                 takes
-                                                as long as you are the one. She is picky about her affection. She
-                                                loves
+                                                as long as you are the one. She is picky about her affection. She loves
                                                 cuddles and to stretch into your hands for a deeper relaxations.</p>
                                             <ul class="modal-ul">
                                                 <li class="modal-li"><span class="modal-span1">Age:</span>
@@ -96,11 +94,11 @@
                                 </div>
                             </div>
                             <!-- ------2----- -->
-                            <div class="card card2"><a href="#openModal2" class="card-link">
-                                    <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Jennifer</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card2">
+                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Jennifer</h4>
+                                <button class="card-button"><a href="#openModal2" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -118,12 +116,10 @@
                                                 patiently waiting to
                                                 find a
                                                 new
-                                                forever home. This girl really enjoys being able to go outside to
-                                                run
+                                                forever home. This girl really enjoys being able to go outside to run
                                                 and
                                                 play,
-                                                but won't hesitate to play up a storm in the house if she has all of
-                                                her
+                                                but won't hesitate to play up a storm in the house if she has all of her
                                                 favorite toys.</p>
                                             <ul class="modal-ul">
                                                 <li class="modal-li"><span class="modal-span1">Age:</span>
@@ -144,11 +140,11 @@
                                 </div>
                             </div>
                             <!-- ------3----- -->
-                            <div class="card card3"><a href="#openModal3" class="card-link">
-                                    <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Woody</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card3">
+                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Woody</h4>
+                                <button class="card-button"><a href="#openModal3" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -164,11 +160,9 @@
                                             <p class="modal-subtitle">Dog - Golden Retriever</p>
                                             <p class="modal-text">Woody is a handsome 3 1/2 year old boy. Woody does
                                                 know
-                                                basic commands and is a smart pup. Since he is on the stronger side,
-                                                he
+                                                basic commands and is a smart pup. Since he is on the stronger side, he
                                                 will
-                                                learn a lot from your training. Woody will be happier when he finds
-                                                a
+                                                learn a lot from your training. Woody will be happier when he finds a
                                                 new
                                                 family that can spend a lot of time with him.</p>
                                             <ul class="modal-ul">
@@ -190,11 +184,11 @@
                                 </div>
                             </div>
                             <!-- ------4----- -->
-                            <div class="card card4"><a href="#openModal4" class="card-link">
-                                    <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Sophia</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card4">
+                                <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Sophia</h4>
+                                <button class="card-button"><a href="#openModal4" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal4" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -212,8 +206,7 @@
                                                 live
                                                 out the best years of my life. I am full of energy. Everyday I'm
                                                 learning
-                                                new things, like how to walk on a leash, go potty outside, bark and
-                                                play
+                                                new things, like how to walk on a leash, go potty outside, bark and play
                                                 with toys and I still need some practice.</p>
                                             <ul class="modal-ul">
                                                 <li class="modal-li"><span class="modal-span1">Age:</span>
@@ -239,11 +232,11 @@
                     <div class="our-friends-catalog">
                         <div class="card-box">
                             <!-- ------5----- -->
-                            <div class="card card5"><a href="#openModal5" class="card-link">
-                                    <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Timmy</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card5">
+                                <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Timmy</h4>
+                                <button class="card-button"><a href="#openModal5" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal5" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -257,13 +250,10 @@
                                         <div class="modal-box">
                                             <h2 class="modal-title">Timmy</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
-                                            <p class="modal-text">Timmy is an adorable grey british shorthair male.
-                                                He
+                                            <p class="modal-text">Timmy is an adorable grey british shorthair male. He
                                                 loves
-                                                to play and snuggle. He is neutered and up to date on age
-                                                appropriate
-                                                vaccinations. He can be chatty and enjoys being held. Timmy has a
-                                                lot to
+                                                to play and snuggle. He is neutered and up to date on age appropriate
+                                                vaccinations. He can be chatty and enjoys being held. Timmy has a lot to
                                                 say
                                                 and wants a person to share his thoughts with.</p>
                                             <ul class="modal-ul">
@@ -285,11 +275,11 @@
                                 </div>
                             </div>
                             <!-- ------6----- -->
-                            <div class="card card6"><a href="#openModal6" class="card-link">
-                                    <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Charly</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card6">
+                                <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Charly</h4>
+                                <button class="card-button"><a href="#openModal6" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal6" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -303,13 +293,10 @@
                                         <div class="modal-box">
                                             <h2 class="modal-title">Charly</h2>
                                             <p class="modal-subtitle">Dog - Jack Russell Terrier</p>
-                                            <p class="modal-text">This cute boy, Charly, is three years old and he
-                                                likes
-                                                adults and kids. He isn’t fond of many other dogs, so he might do
-                                                best
+                                            <p class="modal-text">This cute boy, Charly, is three years old and he likes
+                                                adults and kids. He isn’t fond of many other dogs, so he might do best
                                                 in a
-                                                single dog home. Charly has lots of energy, and loves to run and
-                                                play.
+                                                single dog home. Charly has lots of energy, and loves to run and play.
                                                 We
                                                 think a fenced yard would make him very happy.</p>
                                             <ul class="modal-ul">
@@ -331,11 +318,11 @@
                                 </div>
                             </div>
                             <!-- ------7----- -->
-                            <div class="card card7"><a href="#openModal7" class="card-link">
-                                    <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Scarlett</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card7">
+                                <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Scarlett</h4>
+                                <button class="card-button"><a href="#openModal7" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal7" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -349,11 +336,9 @@
                                         <div class="modal-box">
                                             <h2 class="modal-title">Scarlett</h2>
                                             <p class="modal-subtitle">Dog - Jack Russell Terrier</p>
-                                            <p class="modal-text">Scarlett is a happy, playful girl who will make
-                                                you
+                                            <p class="modal-text">Scarlett is a happy, playful girl who will make you
                                                 laugh
-                                                and smile. She forms a bond quickly and will make a loyal companion
-                                                and
+                                                and smile. She forms a bond quickly and will make a loyal companion and
                                                 a
                                                 wonderful family dog or a good companion for a single individual too
                                                 since
@@ -377,11 +362,11 @@
                                 </div>
                             </div>
                             <!-- ------8----- -->
-                            <div class="card card8"><a href="#openModal8" class="card-link">
-                                    <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Freddie</h4>
-                                    <button class="card-button">Learn more</button>
-                                </a>
+                            <div class="card card8">
+                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Freddie</h4>
+                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
+                                        more</a></button>
 
                                 <div id="openModal8" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -395,13 +380,11 @@
                                         <div class="modal-box">
                                             <h2 class="modal-title">Freddie</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
-                                            <p class="modal-text">Freddie is a little shy at first, but very sweet
-                                                when
+                                            <p class="modal-text">Freddie is a little shy at first, but very sweet when
                                                 he
                                                 warms up. He likes playing with shoe strings and bottle caps. He is
                                                 quick to
-                                                learn the rhythms of his human’s daily life. Freddie has bounced
-                                                around
+                                                learn the rhythms of his human’s daily life. Freddie has bounced around
                                                 a
                                                 lot in his life, and is looking to find his forever home.</p>
                                             <ul class="modal-ul">
