Revert "feat: open modal to click on card, add bg size"
This reverts commit 1d63637e330a8f9a86b790a9d57d4555ccd671e2.

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -29,11 +29,11 @@
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="hamburger">
+            <div class="hamburger" id="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
-            </div>
+            </div>s
         </div>
     </header>
 
@@ -100,16 +100,11 @@
                             <img src="../../assets/icons/arrow1.svg" class="arrow" alt="">
                         </button>
                         <div class="card-box">
-                            <div class="card card1"><a href="#openModal1" class="card-link">
-                                    <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Katrine</h4>
-                                    <button class="card-button">
-                                        <!-- <a href="#openModal1" class="card-link"> -->
-                                        Learn
-                                        more
-                                        <!-- </a> -->
-                                    </button>
-                                </a>
+                            <div class="card card1">
+                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Katrine</h4>
+                                <button class="card-button"><a href="#openModal1" class="card-link">Learn
+                                        more</a></button>
                                 <!-- ------ modal -------->
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -130,16 +125,16 @@
                                                 as long as you are the one. She is picky about her affection. She loves
                                                 cuddles and to stretch into your hands for a deeper relaxations.</p>
                                             <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -148,16 +143,11 @@
                                 </div>
                                 <!-- -------------------- -->
                             </div>
-                            <div class="card card2"><a href="#openModal2" class="card-link">
-                                    <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Jennifer</h4>
-                                    <button class="card-button">
-                                        <!-- <a href="#openModal1" class="card-link"> -->
-                                        Learn
-                                        more
-                                        <!-- </a> -->
-                                    </button>
-                                </a>
+                            <div class="card card2">
+                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Jennifer</h4>
+                                <button class="card-button"><a href="#openModal2" class="card-link">Learn
+                                        more</a></button>
                                 <!-- ------ modal -------->
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -181,16 +171,16 @@
                                                 but won't hesitate to play up a storm in the house if she has all of her
                                                 favorite toys.</p>
                                             <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -199,16 +189,11 @@
                                 </div>
                                 <!-- -------------------- -->
                             </div>
-                            <div class="card card3"><a href="#openModal3" class="card-link">
-                                    <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
-                                    <h4 class="card-name">Woody</h4>
-                                    <button class="card-button">
-                                        <!-- <a href="#openModal1" class="card-link"> -->
-                                        Learn
-                                        more
-                                        <!-- </a> -->
-                                    </button>
-                                </a>
+                            <div class="card card3">
+                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Woody</h4>
+                                <button class="card-button"><a href="#openModal3" class="card-link">Learn
+                                        more</a></button>
                                 <!-- ------ modal -------->
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
@@ -224,24 +209,22 @@
                                             <p class="modal-subtitle">Dog - Golden Retriever</p>
                                             <p class="modal-text">Woody is a handsome 3 1/2 year old boy. Woody does
                                                 know
-                                                basic commands and is a smart pup. Since he is on the stronger side,
-                                                he
+                                                basic commands and is a smart pup. Since he is on the stronger side, he
                                                 will
-                                                learn a lot from your training. Woody will be happier when he finds
-                                                a
+                                                learn a lot from your training. Woody will be happier when he finds a
                                                 new
                                                 family that can spend a lot of time with him.</p>
                                             <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -323,7 +306,8 @@
                     <div class="in-addition-content">
                         <h2 class="in-addition-title">You can also<br>make a donation</h2>
                         <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                        <button class="credit-button credit-icon"><a href="##" class="credit-link">8380 2880 8028 8791
+                        <button class="credit-button credit-icon"><a href="8380 2880 8028 8791 7435"
+                                class="credit-link">8380 2880 8028 8791
                                 7435</a></button>
                         <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                             consectetur adipiscing
