--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -32,7 +32,7 @@
                             class="header-link">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="hamburger">
+            <div class="hamburger" id="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
@@ -75,17 +75,17 @@
                                                 takes
                                                 as long as you are the one. She is picky about her affection. She loves
                                                 cuddles and to stretch into your hands for a deeper relaxations.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -121,17 +121,17 @@
                                                 play,
                                                 but won't hesitate to play up a storm in the house if she has all of her
                                                 favorite toys.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -165,17 +165,17 @@
                                                 learn a lot from your training. Woody will be happier when he finds a
                                                 new
                                                 family that can spend a lot of time with him.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -208,17 +208,17 @@
                                                 learning
                                                 new things, like how to walk on a leash, go potty outside, bark and play
                                                 with toys and I still need some practice.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -256,17 +256,17 @@
                                                 vaccinations. He can be chatty and enjoys being held. Timmy has a lot to
                                                 say
                                                 and wants a person to share his thoughts with.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -299,17 +299,17 @@
                                                 single dog home. Charly has lots of energy, and loves to run and play.
                                                 We
                                                 think a fenced yard would make him very happy.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -343,17 +343,17 @@
                                                 wonderful family dog or a good companion for a single individual too
                                                 since
                                                 she likes to hang out and be with her human.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -387,17 +387,17 @@
                                                 learn the rhythms of his human’s daily life. Freddie has bounced around
                                                 a
                                                 lot in his life, and is looking to find his forever home.</p>
-                                            <ul class="modal-ul">
-                                                <li class="modal-li"><span class="modal-span1">Age:</span>
+                                            <ul>
+                                                <li><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
+                                                <li><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
+                                                <li><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
+                                                <li><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -468,7 +468,6 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="./script2.js"></script>
 </body>
 
 </html>
